SETTINGS: Migrate Library EAN accounts
