# koha-tmpl/intranet-tmpl/prog/js/vue/routes/acquisitions/acquisitions.js
@@ -363,43 +363,93 @@ export const routes = [
                         ],
                     },
                     {
-                        path: "edi_accounts",
-                        title: $__("EDI accounts"),
+                        path: "edi",
+                        title: $__("EDI"),
                         icon: "fa fa-right-left",
-                        resource: "Acquisitions/EdiAccountResource.vue",
+                        disabled: true,
+                        collapsible: true,
                         hidden: ({ sysprefs }) => sysprefs?.edifact == "0",
                         children: [
                             {
-                                path: "",
-                                component: markRaw(ResourceWrapper),
-                                name: "EdiAccountList",
-                                title: $__("List EDI accounts"),
-                                permission: "edi_manage",
-                                is_navigation_item: false,
+                                path: "edi_accounts",
+                                title: $__("EDI accounts"),
+                                icon: "fa fa-right-left",
+                                resource: "Acquisitions/EdiAccountResource.vue",
+                                children: [
+                                    {
+                                        path: "",
+                                        component: markRaw(ResourceWrapper),
+                                        name: "EdiAccountList",
+                                        title: $__("List EDI accounts"),
+                                        permission: "edi_manage",
+                                        is_navigation_item: false,
+                                    },
+                                    {
+                                        path: ":vendor_edi_account_id",
+                                        component: markRaw(ResourceWrapper),
+                                        name: "EdiAccountShow",
+                                        title: $__("Show EDI account"),
+                                        permission: "edi_manage",
+                                        is_navigation_item: false,
+                                    },
+                                    {
+                                        path: "add",
+                                        component: markRaw(ResourceWrapper),
+                                        name: "EdiAccountFormAdd",
+                                        title: $__("Add EDI account"),
+                                        permission: "edi_manage",
+                                        is_navigation_item: false,
+                                    },
+                                    {
+                                        path: "edit/:vendor_edi_account_id",
+                                        component: markRaw(ResourceWrapper),
+                                        name: "EdiAccountFormAddEdit",
+                                        title: $__("Edit EDI account"),
+                                        permission: "edi_manage",
+                                        is_navigation_item: false,
+                                    },
+                                ],
                             },
                             {
-                                path: ":vendor_edi_account_id",
-                                component: markRaw(ResourceWrapper),
-                                name: "EdiAccountShow",
-                                title: $__("Show EDI account"),
-                                permission: "edi_manage",
-                                is_navigation_item: false,
-                            },
-                            {
-                                path: "add",
-                                component: markRaw(ResourceWrapper),
-                                name: "EdiAccountFormAdd",
-                                title: $__("Add EDI account"),
-                                permission: "edi_manage",
-                                is_navigation_item: false,
-                            },
-                            {
-                                path: "edit/:vendor_edi_account_id",
-                                component: markRaw(ResourceWrapper),
-                                name: "EdiAccountFormAddEdit",
-                                title: $__("Edit EDI account"),
-                                permission: "edi_manage",
-                                is_navigation_item: false,
+                                path: "edi_ean_accounts",
+                                title: $__("Library EAN accounts"),
+                                icon: "fa fa-barcode",
+                                resource:
+                                    "Acquisitions/EdiEanAccountResource.vue",
+                                children: [
+                                    {
+                                        path: "",
+                                        component: markRaw(ResourceWrapper),
+                                        name: "EdiEanAccountList",
+                                        title: $__("List library EAN accounts"),
+                                        permission: "edi_manage",
+                                        is_navigation_item: false,
+                                    },
+                                    {
+                                        path: ":edi_ean_account_id",
+                                        component: markRaw(ResourceWrapper),
+                                        name: "EdiEanAccountShow",
+                                        title: $__("Show library EAN account"),
+                                        permission: "edi_manage",
+                                        is_navigation_item: false,
+                                    },
+                                    {
+                                        path: "add",
+                                        component: markRaw(ResourceWrapper),
+                                        name: "EdiEanAccountFormAdd",
+                                        title: $__("Add library EAN account"),
+                                        permission: "edi_manage",
+                                        is_navigation_item: false,
+                                    },
+                                    {
+                                        path: "edit/:edi_ean_account_id",
+                                        component: markRaw(ResourceWrapper),
+                                        name: "EdiEanAccountFormAddEdit",
+                                        title: $__("Edit library EAN account"),
+                                        permission: "edi_manage",
+                                        is_navigation_item: false,
+                                    },
+                                ],
                             },
                         ],
                     },
